# Mad-libs-generator

./: README.md  pyproject.toml  requirements.txt
src/madlibs/: __init__.py  __main__.py  core.py  gui.py  templates.py
tests/: test_core.py
