[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madlibs"
version = "0.1.0"
description = "A polished Mad Libs generator with CLI and Tkinter GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mobin Yousefi", email = "mobin.roj@gmail.com" }
]
dependencies = []

[project.scripts]
madlibs = "madlibs.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["madlibs"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
